<resources>
    <string name="app_name">GroupA2_InClass04</string>
    <string name="Welcome">Welcome!</string>
    <string name="registerButton">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="selectButton">Select</string>
    <string name="select2">Select</string>
    <string name="nameLabel">Name:</string>
    <string name="nameLabel2">Name:</string>
    <string name="enterName">Enter Name</string>
    <string name="printName"></string>
    <string name="emailLabel">Email:</string>
    <string name="emailLabel2">Email:</string>
    <string name="enterEmail">Enter Email</string>
    <string name="printEmail"></string>
    <string name="idLabel">ID:</string>
    <string name="idLabel2">ID:</string>
    <string name="enterID">Enter ID</string>
    <string name="printID"></string>
    <string name="welcomeImage">welcomeImage</string>
    <string name="deptLabel">Dept:</string>
    <string name="deptLabel2">Dept:</string>
    <string name="printDept"></string>
    <string name="compSciButton">Computer Science</string>
    <string name="SISButton">Software Info. Systems</string>
    <string name="bioInfoButton">Bio Informatics</string>
    <string name="dataScienceButton">Data Science</string>
    <string name="toast_implement_ilistener">\" must implement iListener\"</string>
</resources>