<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentFragment">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancelButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deptSelectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deptButtons" />

    <Button
        android:id="@+id/deptSelectButton"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/select2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/deptButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/compSciButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/compSciButton" />

        <RadioButton
            android:id="@+id/sisButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SISButton" />

        <RadioButton
            android:id="@+id/bioInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bioInfoButton" />

        <RadioButton
            android:id="@+id/dataScienceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataScienceButton" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>